Adding parsing for standard in for the first line (the number of expected commands), the second line (the starting coordinate), and subsequent lines (the commands issued)

--- a/TheLittleSweeperThatCould/TheLittleSweeperThatCould/TheLittleSweeperThatCould.csproj
+++ b/TheLittleSweeperThatCould/TheLittleSweeperThatCould/TheLittleSweeperThatCould.csproj
@@ -42,12 +42,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Command.cs" />
+    <Compile Include="Coordinate.cs" />
+    <Compile Include="Instructions.cs" />
     <Compile Include="Parsing\Parser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="NewFolder1\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
