--- a/TheLittleSweeperThatCould/TheLittleSweeperThatCould.Test/TheLittleSweeperThatCould.Test.csproj
+++ b/TheLittleSweeperThatCould/TheLittleSweeperThatCould.Test/TheLittleSweeperThatCould.Test.csproj
@@ -50,9 +50,17 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Parsing\ParserTests.cs" />
+    <Compile Include="InstructionsTests.cs" />
+    <Compile Include="CommandTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TheLittleSweeperThatCould\TheLittleSweeperThatCould.csproj">
+      <Project>{75c82569-f8e9-4fe3-8a4c-ca5be66f9ad7}</Project>
+      <Name>TheLittleSweeperThatCould</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
