Removing defunct Instructions class and tests; adding Grid, reworking necessary after observing memory issues at high load.  Checking in as a save point in case I change my mind about implementation.

--- a/TheLittleSweeperThatCould/TheLittleSweeperThatCould.Test/TheLittleSweeperThatCould.Test.csproj
+++ b/TheLittleSweeperThatCould/TheLittleSweeperThatCould.Test/TheLittleSweeperThatCould.Test.csproj
@@ -50,8 +50,8 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Parsing\ParserTests.cs" />
-    <Compile Include="InstructionsTests.cs" />
     <Compile Include="CommandTests.cs" />
+    <Compile Include="GridTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
