--- a/TheLittleSweeperThatCould/TheLittleSweeperThatCould/TheLittleSweeperThatCould.csproj
+++ b/TheLittleSweeperThatCould/TheLittleSweeperThatCould/TheLittleSweeperThatCould.csproj
@@ -44,7 +44,7 @@
   <ItemGroup>
     <Compile Include="Command.cs" />
     <Compile Include="Coordinate.cs" />
-    <Compile Include="Instructions.cs" />
+    <Compile Include="Grid.cs" />
     <Compile Include="Parsing\Parser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
