--- a/TheLittleSweeperThatCould/TheLittleSweeperThatCould.Test/TheLittleSweeperThatCould.Test.csproj
+++ b/TheLittleSweeperThatCould/TheLittleSweeperThatCould.Test/TheLittleSweeperThatCould.Test.csproj
@@ -49,9 +49,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Parsing\ParserTests.cs" />
+    <Compile Include="ParserTests.cs" />
     <Compile Include="CommandTests.cs" />
     <Compile Include="GridTests.cs" />
+    <Compile Include="InstructionsTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
