--- a/TheLittleSweeperThatCould/TheLittleSweeperThatCould/TheLittleSweeperThatCould.csproj
+++ b/TheLittleSweeperThatCould/TheLittleSweeperThatCould/TheLittleSweeperThatCould.csproj
@@ -45,7 +45,8 @@
     <Compile Include="Command.cs" />
     <Compile Include="Coordinate.cs" />
     <Compile Include="Grid.cs" />
-    <Compile Include="Parsing\Parser.cs" />
+    <Compile Include="Instructions.cs" />
+    <Compile Include="Parser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tile.cs" />
@@ -53,8 +54,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="NewFolder1\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
