Solution good to 20m items before exploding. Checking in to save progress.  Not sure if I need to build out subdivisions, but it's really not going to be good if I have to load from disk.

--- a/TheLittleSweeperThatCould/TheLittleSweeperThatCould.Test/TheLittleSweeperThatCould.Test.csproj
+++ b/TheLittleSweeperThatCould/TheLittleSweeperThatCould.Test/TheLittleSweeperThatCould.Test.csproj
@@ -53,6 +53,7 @@
     <Compile Include="CommandTests.cs" />
     <Compile Include="GridTests.cs" />
     <Compile Include="InstructionsTests.cs" />
+    <Compile Include="SectorTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
