--- a/TheLittleSweeperThatCould/TheLittleSweeperThatCould/TheLittleSweeperThatCould.csproj
+++ b/TheLittleSweeperThatCould/TheLittleSweeperThatCould/TheLittleSweeperThatCould.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Parser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sector.cs" />
     <Compile Include="Tile.cs" />
   </ItemGroup>
   <ItemGroup>
