--- a/TheLittleSweeperThatCould/TheLittleSweeperThatCould.Test/TheLittleSweeperThatCould.Test.csproj
+++ b/TheLittleSweeperThatCould/TheLittleSweeperThatCould.Test/TheLittleSweeperThatCould.Test.csproj
@@ -50,10 +50,10 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ParserTests.cs" />
-    <Compile Include="CommandTests.cs" />
     <Compile Include="GridTests.cs" />
     <Compile Include="InstructionsTests.cs" />
-    <Compile Include="SectorTests.cs" />
+    <Compile Include="CoordinateTests.cs" />
+    <Compile Include="TestCoordinates.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
