--- a/TheLittleSweeperThatCould/TheLittleSweeperThatCould/TheLittleSweeperThatCould.csproj
+++ b/TheLittleSweeperThatCould/TheLittleSweeperThatCould/TheLittleSweeperThatCould.csproj
@@ -44,13 +44,12 @@
   <ItemGroup>
     <Compile Include="Command.cs" />
     <Compile Include="Coordinate.cs" />
+    <Compile Include="Direction.cs" />
     <Compile Include="Grid.cs" />
     <Compile Include="Instructions.cs" />
     <Compile Include="Parser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Sector.cs" />
-    <Compile Include="Tile.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
