--- a/TheLittleSweeperThatCould/TheLittleSweeperThatCould.Test/TheLittleSweeperThatCould.Test.csproj
+++ b/TheLittleSweeperThatCould/TheLittleSweeperThatCould.Test/TheLittleSweeperThatCould.Test.csproj
@@ -48,14 +48,17 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IntegrationTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ParserTests.cs" />
     <Compile Include="GridTests.cs" />
     <Compile Include="InstructionsTests.cs" />
     <Compile Include="CoordinateTests.cs" />
+    <Compile Include="SectorTests.cs" />
     <Compile Include="TestCoordinates.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
